examples/minimal/backend.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          # the above values locate the resources to patch
          # you can safely ignore them
          #
          # set image to nginx:1.29.5-alpine3.23
          image: nginx:1.29.5-alpine3.23
