examples/minimal/pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          # the above values locate the resources to patch
          # you can safely ignore them
          #
          # mount the persistent volume into the backend container
          volumeMounts:
            - name: backend-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: backend-data
      spec:
        # SECoder currently allows PVCs only on this StorageClass.
        # It is backed by NFS and survives Pod recreation.
        storageClassName: nfs-tmp
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
