examples/minimal/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  # the above values locate the resources to patch
  # you can safely ignore them
  #
  # add a hostname binding to publish your application
  hostnames:
    - test-u-2026000000.secoder.net
